apps/unithon/backend-dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unithon-backend-dev
  namespace: unithon
  labels:
    app: unithon-backend-dev
spec:
  replicas: 0
  selector:
    matchLabels:
      app: unithon-backend-dev
  template:
    metadata:
      labels:
        app: unithon-backend-dev
    spec:
      containers:
        - name: unithon-backend-dev
          image: hyeonwoo5342/unithon-backend-dev:51
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "200Mi"
              cpu: "150m"
            limits:
              memory: "200Mi"
              cpu: "150m"
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 40
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 35
            periodSeconds: 10
