apps/unithon/backend-dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unithon-backend-dev-ingress
  namespace: unithon
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: dev-api.haenu.dev
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: unithon-backend-dev
                port:
                  number: 8000
